--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,32 @@ input[type=search]{
     color:gray;
 }
 
+header + div{
+    margin-top:10px;
+}
+#typenote{
+    text-align: center;
+}
+
+#typenote input[type=text]{
+    width:50%;
+    padding:16px;
+    border-radius: 8px;
+    padding-left: 12px;
+    border:none;
+    box-shadow: 2px 2px 5px 2px rgb(172, 169, 169);
+    outline: none;
+}
+
+
 @media(max-width:600px){
     input[type=search]{
         width:90%;
     }
     .searchIcon{
         left:8%;
+    }
+    #typenote input[type=text]{
+        width:90%;
     }
 }
